@@ -17,6 +17,8 @@
   - Improve editing and search usability.
   - Configure =xref= to use =ripgrep= when it's available.
   - Better =term-mode= usability.
+  - Replaced =global-goto-address-mode= by local enabling.
+
 
 ** v2.0.0 - 2022-04-07
 
